errors were fixed :)

--- a/M1-D10-EX.html
+++ b/M1-D10-EX.html
@@ -83,7 +83,7 @@
         <li></li>
         <li></li>
       </ol>
-      <table class="tables">
+      <table>
         <tr>
           <th>Column1</th>
           <th>Column2</th>
@@ -110,7 +110,9 @@
       </table>
       <hr>
       <div class="second-container">
-        <p>This is first paragraph</p>
+        <section class="p_access">
+          <p>This is first paragraph</p>
+        </section>
         <ul>
           <li></li>
         </ul>
